<resources>
    <string name="app_name">民情管理</string>

    <string name="serverurl">http://98.52.9.129:6080/arcgis/rest/services/SampleWorldCities/MapServer</string>
    <string name="gzserver">http://98.52.9.129:6080/arcgis/rest/services/gzfp/gzfp/MapServer</string>
    <string name="serverhost">http://98.52.9.127:8080/</string>

    <!--地图服务地址-->
    <string name="fe_server">http://222.85.131.179:6080/arcgis/rest/services/gzfp/LDXX/FeatureServer</string>
    <string name="ld_fserver">http://222.85.131.179:6080/arcgis/rest/services/gzfp/LDXX/FeatureServer/0</string>

    <string name="dingwei">定位</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。请点击"设置"-"权限"-打开所需权限。最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="register_ssxzqybm">行政区域编码</string>
    <string name="register_ssxzqybm_hint">请输入所属12位行政区域编码</string>
    <string name="register_ssxzqymc">行政区域全称</string>
    <string name="register_ssdwname">所属单位名称</string>
    <string name="register_userbh">用户编号</string>
    <string name="register_userbh_hint">请输入用户编号</string>
    <string name="register_usermm">用户密码</string>
    <string name="register_usermm_hint">请输入密码</string>
    <string name="register_lxsjhm">手机号码</string>
    <string name="register_lxsjhm_hint">请输入11位手机号码</string>
    <string name="register_reg_submit">注册绑定</string>
    <string name="lockpwd_login_submit">立即登录</string>
    <string name="login_set_ipconfig">设置服务器连接信息</string>
    <string name="ipconfig">中心IP地址配置</string>
    <string name="ipaddr">IP地址</string>
    <string name="ipport">端口号</string>
    <string name="testconnect">检测连接</string>
    <string name="save_clientipconfig">保存并回到登录页面</string>
    <string name="icons">&#xf060;</string>
    <string name="jtda_icon">&#xf0c0;</string>
    <string name="ldda_icon">&#xe904;</string>
    <string name="fwda_icon">&#xe900;</string>
    <string name="qygk_icon">&#xe9cb;</string>
    <string name="pjjy_icon">&#xe921;</string>
    <string name="ldjy_icon">&#xf16c;</string>
    <string name="shbz_icon">&#xe999;</string>
    <string name="jhsy_icon">&#xf228;</string>
    <string name="cyfw_icon">&#xf0f0;</string>
    <string name="zzgl_icon">&#xf0b1;</string>
    <string name="jtrkgl_icon">&#xf0c0;</string>
    <string name="cjrq_icon">&#xf29b;</string>
    <string name="kclr_icon">&#xf29d;</string>
    <string name="lset_icon">&#xf1ae;</string>

    <string name="ldxxgl_icon">&#xf0f7;</string>
    <string name="ldssgl_icon">&#xf187;</string>

    <string name="fwxxgl_icon">&#xf015;</string>
    <string name="shhjgl_icon">&#xf18c;</string>

    <string name="qygk_jbxx_icon">&#xf00b;</string>
    <string name="qygk_fwry_icon">&#xf0b1;</string>
    <string name="qygk_xxxx_icon">&#xf2b4;</string>
    <string name="qygk_rkqk_icon">&#xf0c0;</string>
    <string name="qygk_sdxx_icon">&#xf07a;</string>
    <string name="qygk_cgxx_icon">&#xe9a4;</string>
    <string name="qygk_jtjj_icon">&#xf157;</string>
    <string name="qygk_tsfw_icon">&#xe9b1;</string>

    <string name="pjjy_snrq_icon">&#xf0c0;</string>
    <string name="pjjy_jycd_icon">&#xf1ab;</string>
    <string name="pjjy_pkxs_icon">&#xe9df;</string>

    <string name="ldjy_jyzk_icon">&#xe972;</string>
    <string name="ldjy_ssll_icon">&#xf29a;</string>
    <string name="ldjy_wcwg_icon">&#xf238;</string>
    <string name="ldjy_ldjn_icon">&#xf1a8;</string>
    <string name="ldjy_qzxq_icon">&#xf2b5;</string>
    <string name="ldjy_pxxq_icon">&#xf277;</string>

    <string name="shbz_ylaobx_icon">&#xf08a;</string>
    <string name="shbz_ylbx_icon">&#xf0fa;</string>

    <string name="jhsy_syqk_icon">&#xf00b;</string>
    <string name="jhsy_hydx_icon">&#xf182;</string>
    <string name="jhsy_cssd_icon">&#xf0ea;</string>
    <string name="jhsy_dszn_icon">&#xf182;</string>
    <string name="jhsy_cszn_icon">&#xf0c0;</string>
    <string name="jhsy_cjzn_icon">&#xf193;</string>

    <string name="cyfw_mbhz_icon">&#xf236;</string>
    <string name="cyfw_xyrq_icon">&#xf2c5;</string>
    <string name="cyfw_yjrq_icon">&#xf0fc;</string>
    <string name="cyfw_mykh_icon">&#xf2ce;</string>
    <string name="cyfw_jkxc_icon">&#xf1d9;</string>

    <string name="zzgl_jfdj_icon">&#xf298;</string>
    <string name="zzgl_jftj_icon">&#xf0e3;</string>
    <string name="zzgl_tjsf_icon">&#xf21c;</string>
    <string name="zzgl_sjbg_icon">&#xe9b9;</string>
    <string name="zzgl_rwdd_icon">&#xe9ba;</string>
    <string name="add">&#xf067;</string>
    <string name="edit">&#xf044;</string>
    <string name="icon_caret_right">&#xf0da;</string>
    <string name="icon_caret_desc">&#xf0dd;</string>
    <string name="icon_map_marker">&#xf041;</string>
    <string name="icon_search">&#xe987;</string>
    <string name="icon_user">&#xf2be;</string>
    <string name="icon_info">&#xea0d;</string>
    <string name="icon_clear">&#xf057;</string>
    <string name="icon_delete">&#xf05c;</string>
</resources>
